--- a/style.css
+++ b/style.css
@@ -34,7 +34,33 @@ section{
   margin: 20px auto;
   padding: 50px 20px;
   max-width: 800px;  
-}  
+}
+#project,#about#-me.{
+  max-width:800px;
+  margin:20px outo;
+ .project{
+   background-color:blue;
+   margin:20px;
+   padding:20px;
+   border-radius:10px;
+   box-shadow:0 4px 6px rgba<0, 0,0,0.1>;
+   transition:transform 0.3s ease-in-out;
+   display:flex;
+   flex-direction:column;
+   align-items:center:
+}
+  .project:hover{
+    transform:translate{-5px}
+  }
+  form{
+    display:flex;
+    flex-direction:column;
+    gap:5px;
+    max-width:400px;
+    margin:0 {auto;}
+section h2{
+  color:#333;
+  margin-botton:#333;
 footer{
   background-color: #333;
   color: #fff;
