--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
   box-sizing:border-box;
   background-color:#282c34;
   color:rgb(29,27,27);
+  font-size:18px;
 }
 header{
   background-color: blue;
@@ -21,29 +22,29 @@ nav ul{
   padding: 0;
 }
 nav ul li{
-  display: inline;
-  margin: 0 15px;  
+  margin: 0 25px;  
 }
 nav ul li a{
-  color: blue;
+  color: white;
   text-decoration: none;
   font-weight: bold;
   transition: color 0.3s ease;
   position:reletive;
+  font-size:15rem;
+  padding:10px 15px;
 }
 nav ul li a:hover;{
   color:blue;
  }
 section{
-  margin: 20px auto;
-  padding: 50px 20px;
-  max-width: 800px;  
+ padding:50px20px;
+  text-align:center;
 }
-#project,#about#-me.{
+#project,#about#contact-me.{
   max-width:800px;
   margin:20px outo;
  .project{
-   background-color:blue;
+   background-color:white;
    margin:20px;
    padding:20px;
    border-radius:10px;
@@ -54,7 +55,7 @@ section{
    align-items:center:
 }
   .project:hover{
-    transform:translate{-5px}
+    transform:translateY{-5px}
   }
   form{
     display:flex;
